--- a/meu-Site-main/meu-Site-main/meu-Site-main/meu-Site-main/Site-1--main/sai 1/index.css
+++ b/meu-Site-main/meu-Site-main/meu-Site-main/meu-Site-main/Site-1--main/sai 1/index.css
@@ -22,3 +22,22 @@ img{
     border-radius: 50%;
     border: 5px solid red;
 }
+.center{
+    text-align: center;
+}
+
+h1 { 
+    color: red;
+}
+
+h2 {
+    color: white;
+}
+
+h3 {
+    color: white;
+}
+
+p {
+    color: white;
+}
